[package]
name = "crater-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
futures = "0.3.31"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.40.0", features = [
    "fs",
    "full",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "tokio-macros",
] }
tokio-stream = "0.1.17"
