[package]
name = "crater-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.27"
regex = "1.11.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "fs",
    "full",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "tokio-macros",
] }
toml = "0.9.2"
